--- a/nginx/nginx-plus-fabric.conf.j2
+++ b/nginx/nginx-plus-fabric.conf.j2
@@ -30,21 +30,11 @@ daemon off;
 
 http {
 
-    include mime.types;
-    include nginx-gz.conf;
-    resolver {{ resolver.host }} valid={{ resolver.ttl }};  #use local DNS and override TTL to whatever value makes sense
-    resolver_timeout 2s;
-
-    client_max_body_size 30M;
-    client_body_buffer_size 30M;
-    default_type application/octet-stream;
-    access_log /var/log/nginx/access.log combined;
-
-    # use the kernel sendfile
-    sendfile        on;
-    # prepend http headers before sendfile()
-    tcp_nopush		  on;
-    tcp_nodelay		  on;
+  include mime.types;
+  include nginx-gz.conf;
+  resolver {{ resolver.host }} valid={{ resolver.ttl }};  #use local DNS and override TTL to whatever value makes sense
+  resolver_timeout 2s;
+  client_max_body_size 30M;
 
   {% if services %}
     {% for name, service in services.iteritems() %}
@@ -57,33 +47,50 @@ http {
     {% endfor %}
   {% endif %}
 
-    server {
-        listen 80 default_server;
-        keepalive_timeout	3600s;
-        keepalive_disable	none;
-        keepalive_requests  100000;
-        rewrite_log on;
-
-        server_name {{ name }};
-        status_zone {{ name }};
-
-        root {{ root }};
-
-        include default-location.conf;
+  server {
+    listen 80;
 
     {% if services %}
       {% for name, service in services.iteritems() %}
         {{ location(name, service.healthcheck, service.healthcheck_uri) }}
       {% endfor %}
     {% endif %}
-        location = /status.html {
-            root /usr/share/nginx/html/;
-        }
 
-        location /status {
-            status;
-        }
+    location / {
+      return         301 https://$host$request_uri;
+    }
+  }
 
+  server {
+    listen       443 ssl;
+
+    ssl_certificate      /etc/ssl/nginx/certificate.pem;
+    ssl_certificate_key  /etc/ssl/nginx/key.pem;
+    include nginx-ssl.conf;
+
+    keepalive_timeout	3600s;
+    keepalive_disable	none;
+    keepalive_requests  100000;
+
+    server_name {{ name }};
+    status_zone {{ name }};
+
+    root {{ root }};
+
+    include default-location.conf;
+
+    {% if services %}
+      {% for name, service in services.iteritems() if service.expose_external%}
+        {{ location(name, service.healthcheck, service.healthcheck_uri) }}
+      {% endfor %}
+    {% endif %}
+
+    location = /status.html {
+      root /usr/share/nginx/html/;
     }
 
+    location /status {
+      status;
+    }
+  }
 }
