--- a/nginx/fabric/fabric_nginx.conf.j2
+++ b/nginx/fabric/fabric_nginx.conf.j2
@@ -1,7 +1,7 @@
 {% macro location(name) -%}
   location /{{ name }}/ {
     proxy_pass https://{{ name }}/;
-    proxy_set_header Host {{ name }}{% if internal_domain_name != None %}.{{internal_domain_name}}{% endif %};
+    proxy_set_header Host {{ name }}{% if namespace != None and namespace != '' %}.{{ namespace }}{% endif %}{% if internal_domain_name != None and internal_domain_name != '' %}.{{internal_domain_name}}{% endif %};
 
     proxy_ssl_session_reuse     on;
     proxy_ssl_protocols         TLSv1.2;
@@ -74,7 +74,7 @@ http {
   {% if services %}
       {% for name, service in services.iteritems() %}
       upstream {{ name }} {
-        server          {{ name }}.{{ service.server }}:{{ service.port }};
+        server        {{ name }}{% if namespace != None and namespace != '' %}.{{ namespace }}{% endif %}{% if service.server != None and service.server != '' %}.{{ service.server }}{% endif %}{% if service.port %}:{{ service.port }}{% endif %};
         zone backend    64k;
         keepalive       300;
       }
